--- a/src/main/resources/templates/admin/create_user.html
+++ b/src/main/resources/templates/admin/create_user.html
@@ -5,30 +5,76 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <title>HuyShop</title>
 </head>
 <body>
-<form th:object="${user}" th:action="@{/admin/user/create}" method="post">
-    <table>
-        <tr>
-            <td>USERNAME</td>
-            <td><input type="text" th:field="*{userName}"></td>
-        </tr>
-        <tr>
-            <td>PASSWORD</td>
-            <td><input type="text" th:field="*{passWord}"></td>
-        </tr>
-        <tr>
-            <td>ROLE</td>
-            <td >
-                <select th:field="*{roleId}">
-                    <option th:each="item : ${roles}" th:value="${item.id}" th:text="${item.name}" ></option>
-                </select>
-            </td>
-        </tr>
-    </table>
-    <button type="submit" value="add">add</button>
-    <button type="reset" value="reset">reset</button>
-</form>
+<!--<form th:object="${user}" th:action="@{/admin_user/user/create}" method="post">-->
+<!--    <table>-->
+<!--        <tr>-->
+<!--            <td>USERNAME</td>-->
+<!--            <td><input type="text" th:field="*{userName}"></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>PASSWORD</td>-->
+<!--            <td><input type="password" th:field="*{passWord}"></td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>ROLE</td>-->
+<!--            <td >-->
+<!--                <select th:field="*{roleId}">-->
+<!--                    <option th:each="item : ${roles}" th:value="${item.id}" th:text="${item.name}" ></option>-->
+<!--                </select>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--    </table>-->
+<!--    <button type="submit" value="add">add</button>-->
+<!--    <button type="reset" value="reset">reset</button>-->
+<!--</form>-->
+<nav class="navbar navbar-expand-sm bg-success navbar-dark">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" th:href="@{http://localhost:8080/index}" >Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin_product/categories}" >List Category</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin_product/products}">List Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin_user/users}">List User</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " th:href="@{/admin_user/roles}">List Role</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container mt-3">
+    <h2>FORM</h2>
+    <form th:object="${user}" th:action="@{/admin_user/user/create}" method="post">
+        <div class="mb-3 mt-3">
+            <label for="username">USERNAME:</label>
+            <input type="text" class="form-control" id="username" placeholder="Enter name" th:field="*{userName}" >
+        </div>
+        <div class="mb-3 mt-3">
+            <label for="password">PASSWORD:</label>
+            <input type="password" class="form-control" id="password" placeholder="Enter name" th:field="*{passWord}" >
+        </div>
+        <div class="mb-3 mt-3">
+            <label for="role_id">ROLE:</label>
+            <select th:field="*{roleId}" id="role_id" class="form-select" aria-label="Default select example">
+                <option th:each="item : ${roles}" th:value="${item.id}" th:text="${item.name}" ></option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="reset" class="btn btn-danger">Reset</button>
+    </form>
+</div>
 </body>
 </html>
