--- a/src/main/resources/templates/admin/role_list.html
+++ b/src/main/resources/templates/admin/role_list.html
@@ -12,9 +12,31 @@
     <title>HuyShop</title>
 </head>
 <body>
+<nav class="navbar navbar-expand-sm bg-success navbar-dark">
+    <div class="container-fluid">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" th:href="@{http://localhost:8080/index}" >Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin_product/categories}" >List Category</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin_product/products}">List Product</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/admin_user/users}">List User</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " th:href="@{/admin_user/roles}">List Role</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <h1 align="center">ROLE-LIST</h1>
-<a class="btn btn-success" th:href="@{/admin/create_role}">add new</a>
-<a class="btn btn-success" th:href="@{/index}"> home </a>
+
+<a class="btn btn-success" th:href="@{/admin_user/create_role}">add new</a>
+<a class="btn btn-success" th:href="@{http://localhost:8080/index}"> home </a>
 <table border="1" class="table">
     <tr class="table-primary">
         <td>ID</td>
@@ -26,7 +48,7 @@
         <td th:text="${item.id}"></td>
         <td th:text="${item.name} "></td>
         <td th:text="${item.status}? 'Active':'Not Active' "></td>
-        <td><a class="btn btn-primary" th:href="@{|/admin/role/details/${item.id}|}">update</a></td>
+        <td><a class="btn btn-primary" th:href="@{|/admin_user/role/details/${item.id}|}">update</a></td>
     </tr>
 </table>
 </body>
